--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -30,9 +30,8 @@
 @media screen and (max-width: 544px) {
 
   .photo-grid {
-    max-width: 286px;
     grid-template-columns: repeat(1, minmax(min-content, max-content));
     gap: 12px;
-    margin: 64px auto;
+    margin: 64px 16px;
   }
 }
