--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,6 +1,7 @@
 .page {
   min-width: 320px;
   max-width: 1280px;
+  margin: auto;
   font-family: 'Inter', 'Arial', sans-serif;
   background: #2A2C2F;
   padding-top: 28px;
