--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,6 +1,6 @@
 .cover {
   max-width: 1178px;
-  background-image: url(../../images/cover-trains.jpg);
+  background-image: url(../../images/cover/cover-trains.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
