--- a/pages/index.css
+++ b/pages/index.css
@@ -1,6 +1,6 @@
 @import url('../vendor/normalize.css');
 
-@import url('./fonts.css');
+@import url('../vendor/fonts.css');
 
 @import url('../blocks/body/body.css');
 
@@ -8,6 +8,7 @@
 
 @import url('../blocks/header/header.css');
 @import url('../blocks/header/__logo/header__logo.css');
+@import url('../blocks/header/__lang-links/header__lang-links.css');
 @import url('../blocks/header/__lang-link/header__lang-link.css');
 @import url('../blocks/header/__lang-link/_active/header__lang-link_active.css');
 
@@ -24,8 +25,7 @@
 @import url('../blocks/intro/__title/intro__title.css');
 @import url('../blocks/intro/__text/intro__text.css');
 @import url('../blocks/intro/__list/intro__list.css');
-@import url('../blocks/intro/__list/__vary/intro__vary.css');
-@import url('../blocks/intro/__list/__span-accent/intro-span-accent.css');
+@import url('../blocks/intro/__span-accent/intro__span-accent.css');
 
 @import url('../blocks/photo-grid/photo-grid.css');
 @import url('../blocks/photo-grid/__item/photo-grid__item.css');
